; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_lpc.c_lpc_pirq_name.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_lpc.c_lpc_pirq_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lpc_bridge = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [21 x i8] c"\\_SB.PC00.ISA.LNK%c,\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lpc_pirq_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32*, i32** @lpc_bridge, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %15

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = add nsw i32 65, %9
  %11 = sub nsw i32 %10, 1
  %12 = trunc i32 %11 to i8
  %13 = call i32 @asprintf(i8** %4, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8 signext %12)
  %14 = load i8*, i8** %4, align 8
  store i8* %14, i8** %2, align 8
  br label %15

15:                                               ; preds = %8, %7
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i32 @asprintf(i8**, i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
